feat: add more methods for Option

--- a/packages/option/tsconfig.json
+++ b/packages/option/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "lib": ["ES6", "DOM"],
+    "target": "ES6",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
