--- a/packages/option/package.json
+++ b/packages/option/package.json
@@ -53,6 +53,7 @@
   },
   "homepage": "https://github.com/sbking/kudasai/#readme",
   "devDependencies": {
+    "@types/node": "^18.11.17",
     "typescript": "^4.9.4"
   }
 }
